--- a/index.html
+++ b/index.html
@@ -3,17 +3,18 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>John Mark Kiritu — Home</title>
+  <title>John Mark Kiritu — Creative Developer & Designer</title>
 
   <link rel="icon" href="nobklogo.png" type="image/png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;900&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" />
 
   <style>
     :root {
-      --bg: #050505;
-      --glass: rgba(15, 20, 35, 0.8);
+      --bg: #000000;
+      --glass: rgba(15, 20, 35, 0.85);
       --accent: #3b82f6;
       --text: #ffffff;
       --text-light: #94a3b8;
@@ -32,176 +33,245 @@
     }
 
     * { margin:0; padding:0; box-sizing:border-box; }
-    
+    html { scroll-behavior: smooth; }
+
     body {
-      height: 100vh;
+      min-height: 100dvh;
       font-family: 'Inter', sans-serif;
       background: var(--bg);
-      background-image: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url('wllpbk.jpg');
+      background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url('wllpbk.jpg');
+      background-attachment: fixed;
       background-size: cover;
-      background-position: center;
       color: var(--text);
+      line-height: 1.6;
+      transition: background 0.3s ease, color 0.3s ease;
       display: flex;
-      align-items: center;
-      justify-content: center;
-      overflow: hidden;
+      flex-direction: column;
     }
 
-    /* Floating Bubble */
-    .bubble {
+    /* Floating bubble */
+    .floating-bubble {
       position: fixed;
       left: 24px; top: 24px;
       width: 64px; height: 64px;
       border-radius: 50%;
+      overflow: hidden;
       border: 3px solid var(--accent);
+      box-shadow: 0 8px 32px rgba(59,130,246,0.3);
       cursor: pointer;
-      z-index: 200;
-      transition: 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+      z-index: 130;
+      transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
     }
-    .bubble img { width: 100%; height: 100%; border-radius: 50%; object-fit: cover; }
-    .bubble.hidden { opacity: 0; transform: scale(0) rotate(-90deg); pointer-events: none; }
+    .floating-bubble.hidden { opacity: 0; transform: scale(0.5) translateY(-30px); pointer-events: none; }
+    .floating-bubble img { width: 100%; height: 100%; object-fit: cover; }
 
-    /* Icon Menu (Vertical Bar) */
+    /* Icon menu */
     .icon-menu {
       position: fixed;
       left: 16px; top: 50%;
-      transform: translateY(-50%) translateX(-120px);
+      transform: translateY(-50%) translateX(-100px);
+      width: 80px;
       background: var(--glass);
       backdrop-filter: blur(20px);
       border: 1px solid var(--border);
       border-radius: 32px;
-      padding: 20px 10px;
+      padding: 20px 0;
       display: flex;
       flex-direction: column;
-      gap: 15px;
-      z-index: 150;
-      transition: 0.5s cubic-bezier(0.34, 1.56, 0.64, 1);
+      align-items: center;
+      gap: 18px;
+      z-index: 120;
+      opacity: 0;
+      transition: all 0.5s cubic-bezier(0.34, 1.56, 0.64, 1);
     }
-    .icon-menu.visible { transform: translateY(-50%) translateX(0); }
+    .icon-menu.visible { opacity: 1; transform: translateY(-50%) translateX(0); }
 
-    .menu-btn {
-      width: 52px; height: 52px;
-      border-radius: 16px;
-      background: var(--card-bg);
-      color: var(--text);
-      display: grid; place-items: center;
-      cursor: pointer; transition: 0.3s;
-      border: none; font-size: 1.2rem;
+    .hamburger-btn {
+      width: 56px; height: 56px; border-radius: 18px;
+      background: var(--card-bg); color: var(--text);
+      display: grid; place-items: center; cursor: pointer; transition: 0.3s;
     }
-    .menu-btn:hover { background: var(--accent); color: white; transform: scale(1.1); }
+    .hamburger-btn:hover { background: var(--accent); color: white; transform: scale(1.1); }
 
-    /* Text Menu (Slide Out) */
+    .icon-items { display: flex; flex-direction: column; gap: 16px; }
+    .icon-item {
+      width: 52px; height: 52px; border-radius: 16px;
+      background: var(--card-bg); color: var(--text);
+      display: grid; place-items: center; cursor: pointer; transition: 0.3s;
+      text-decoration: none;
+    }
+    .icon-item:hover, .icon-item.active { background: var(--accent); color: white; transform: scale(1.1); }
+
+    /* Text menu */
     .text-menu {
       position: fixed;
-      left: 100px; top: 50%;
-      transform: translateY(-50%) translateX(-150%);
-      width: 280px;
+      left: 112px; top: 50%;
+      transform: translateY(-50%) translateX(-120%);
+      width: 320px;
       background: var(--glass);
-      backdrop-filter: blur(30px);
+      backdrop-filter: blur(25px);
       border: 1px solid var(--border);
-      border-radius: 24px;
-      padding: 30px;
-      z-index: 140;
-      transition: 0.5s ease;
+      border-radius: 28px;
+      padding: 40px;
+      z-index: 115;
+      transition: all 0.5s cubic-bezier(0.34, 1.56, 0.64, 1);
       opacity: 0;
+      pointer-events: none;
     }
-    .text-menu.open { transform: translateY(-50%) translateX(0); opacity: 1; }
+    .text-menu.open { transform: translateY(-50%) translateX(0); opacity: 1; pointer-events: auto; }
 
-    .profile-mini { display: flex; align-items: center; gap: 12px; margin-bottom: 25px; }
-    .profile-mini img { width: 45px; height: 45px; border-radius: 50%; border: 2px solid var(--accent); }
+    .profile { display: flex; align-items: center; gap: 15px; margin-bottom: 30px; }
+    .profile img { width: 60px; height: 60px; border-radius: 50%; border: 2px solid var(--accent); }
 
-    .nav-links a {
-      display: flex; align-items: center; gap: 12px;
-      padding: 12px; color: var(--text);
-      text-decoration: none; border-radius: 10px; transition: 0.3s;
+    .text-links a {
+      display: flex; align-items: center; gap: 15px;
+      padding: 12px 20px; border-radius: 12px;
+      color: var(--text); text-decoration: none; transition: 0.3s;
     }
-    .nav-links a:hover { background: var(--accent); color: white; }
+    .text-links a:hover, .text-links a.active { background: var(--accent); color: white; }
 
-    /* Hero */
-    .hero { text-align: center; z-index: 10; padding: 20px; }
-    h1 { font-size: clamp(2.5rem, 8vw, 4.5rem); font-weight: 900; margin-bottom: 1rem; }
-    .accent-text { color: var(--accent); }
-    p { color: var(--text-light); max-width: 500px; margin: 0 auto 2rem; }
+    /* Hero Section Content */
+    .hero-container {
+      flex: 1;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding: 2rem;
+    }
 
-    #theme-toggle { margin-top: 10px; }
+    .section-content {
+      background: var(--card-bg);
+      backdrop-filter: blur(10px);
+      padding: 4rem;
+      border-radius: 40px;
+      border: 1px solid var(--border);
+      max-width: 800px;
+      width: 100%;
+      text-align: center;
+    }
 
+    h1 { font-weight: 900; background: linear-gradient(45deg, var(--text), var(--accent)); -webkit-background-clip: text; -webkit-text-fill-color: transparent; margin-bottom: 1.5rem; font-size: clamp(2.5rem, 8vw, 5rem); }
+
+    /* Footer */
+    footer {
+      background: var(--glass);
+      padding: 4rem 10% 2rem;
+      border-top: 1px solid var(--border);
+      width: 100%;
+    }
+    .footer-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 40px; }
+    .social-icons { display: flex; gap: 15px; margin-top: 20px; justify-content: center; }
+    .social-icons a { width: 40px; height: 40px; border-radius: 50%; background: var(--card-bg); color: var(--text); display: grid; place-items: center; transition: 0.3s; text-decoration: none; }
+    .social-icons a:hover { background: var(--accent); color: white; }
+
+    @media (max-width: 768px) {
+      .icon-menu { left: auto; right: 16px; top: auto; bottom: 20px; transform: translateY(0); flex-direction: row; width: auto; padding: 10px 20px; border-radius: 50px; }
+      .icon-menu.visible { transform: translateY(0); }
+      .icon-items { flex-direction: row; }
+      .text-menu { left: 20px; right: 20px; width: auto; bottom: 100px; top: auto; transform: translateY(20px); }
+      .text-menu.open { transform: translateY(0); }
+    }
   </style>
 </head>
 <body>
 
-  <div class="bubble" id="bubble">
-    <img src="nobklogo.png" alt="JMK">
+  <div class="floating-bubble" id="floating-bubble">
+    <img src="nobklogo.png" alt="John Mark Kiritu">
   </div>
 
-  <nav class="icon-menu" id="iconMenu">
-    <button class="menu-btn" id="hamburger" title="Open Menu">
+  <nav class="icon-menu" id="icon-menu">
+    <div id="hamburger" class="hamburger-btn" title="Menu">
       <i class="fa-solid fa-bars"></i>
-    </button>
-    <div style="height: 1px; background: var(--border); width: 80%; margin: 0 auto;"></div>
-    <a href="index.html" class="menu-btn" title="Home"><i class="fa-solid fa-house"></i></a>
-    <button class="menu-btn" id="theme-toggle" title="Toggle Theme">
-      <i class="fa-solid fa-moon" id="theme-icon"></i>
-    </button>
+    </div>
+    <div class="icon-items">
+      <a href="index.html" class="icon-item active"><i class="fa-solid fa-house"></i></a>
+      <a href="about.html" class="icon-item"><i class="fa-solid fa-user"></i></a>
+      <a href="education.html" class="icon-item"><i class="fa-solid fa-graduation-cap"></i></a>
+      <div class="icon-item" id="theme-toggle"><i class="fa-solid fa-moon" id="theme-icon"></i></div>
+    </div>
   </nav>
 
-  <aside class="text-menu" id="textMenu">
-    <div class="profile-mini">
+  <aside class="text-menu" id="text-menu">
+    <div class="profile">
       <img src="nobklogo.png" alt="JMK">
       <div>
-        <h4 style="font-size: 0.9rem;">John Mark Kiritu</h4>
-        <small style="color: var(--accent);">Creative Developer</small>
+        <strong>John Mark Kiritu</strong><br>
+        <small>Creative Developer</small>
       </div>
     </div>
-    <div class="nav-links">
-      <a href="index.html"><i class="fa-solid fa-house"></i> Home</a>
+    <div class="text-links">
+      <a href="index.html" class="active"><i class="fa-solid fa-house"></i> Home</a>
       <a href="about.html"><i class="fa-solid fa-user"></i> About Me</a>
-      <a href="projects.html"><i class="fa-solid fa-code"></i> Projects</a>
-      <a href="contact.html"><i class="fa-solid fa-envelope"></i> Contact</a>
+      <a href="education.html"><i class="fa-solid fa-graduation-cap"></i> Education</a>
+      <a href="#contact"><i class="fa-solid fa-envelope"></i> Contact</a>
     </div>
   </aside>
 
-  <main class="hero">
-    <h1>Hi, I'm <span class="accent-text">John Mark</span></h1>
-    <p>IT Professional & Creative Developer. I design digital systems with technical precision.</p>
-    <div style="display: flex; gap: 15px; justify-content: center;">
-        <a href="projects.html" style="text-decoration: none; background: var(--accent); color: white; padding: 12px 24px; border-radius: 30px; font-weight: 600;">View Work</a>
+  <main class="hero-container">
+    <div class="section-content">
+      <h1>Hi, I'm John Mark</h1>
+      <p>IT Professional & Creative Developer based in Kampala. I bridge the gap between technical infrastructure and creative design.</p>
+      <div style="margin-top: 2rem;">
+        <a href="about.html" style="text-decoration: none; color: var(--accent); font-weight: 600;">Learn more about me &rarr;</a>
+      </div>
     </div>
   </main>
 
+  <footer id="contact">
+    <div class="footer-grid">
+      <div>
+        <h3>John Mark Kiritu</h3>
+        <p>Building digital experiences with precision.</p>
+      </div>
+      <div>
+        <h3>Contact</h3>
+        <p>marc@wanjeru.dev</p>
+        <div class="social-icons">
+          <a href="#"><i class="fab fa-linkedin"></i></a>
+          <a href="#"><i class="fab fa-github"></i></a>
+          <a href="#"><i class="fa-solid fa-envelope"></i></a>
+        </div>
+      </div>
+    </div>
+    <div style="text-align: center; margin-top: 40px; opacity: 0.5;">
+      © 2026 John Mark Kiritu
+    </div>
+  </footer>
+
   <script>
-    const bubble = document.getElementById('bubble');
-    const iconMenu = document.getElementById('iconMenu');
-    const textMenu = document.getElementById('textMenu');
+    const bubble = document.getElementById('floating-bubble');
+    const iconMenu = document.getElementById('icon-menu');
+    const textMenu = document.getElementById('text-menu');
     const hamburger = document.getElementById('hamburger');
     const themeToggle = document.getElementById('theme-toggle');
     const themeIcon = document.getElementById('theme-icon');
 
-    // 1. Reveal Sidebar from Bubble
+    // Navigation Toggle Logic
     bubble.addEventListener('click', (e) => {
       e.stopPropagation();
       bubble.classList.add('hidden');
       iconMenu.classList.add('visible');
     });
 
-    // 2. Reveal Text Menu from Hamburger
     hamburger.addEventListener('click', (e) => {
       e.stopPropagation();
       textMenu.classList.toggle('open');
     });
 
-    // 3. Theme Logic
-    themeToggle.addEventListener('click', () => {
+    // Theme Toggle Logic
+    themeToggle.addEventListener('click', (e) => {
+      e.stopPropagation();
       const isDark = document.documentElement.getAttribute('data-theme') === 'dark';
       const newTheme = isDark ? 'light' : 'dark';
       document.documentElement.setAttribute('data-theme', newTheme);
       themeIcon.className = newTheme === 'dark' ? 'fa-solid fa-moon' : 'fa-solid fa-sun';
     });
 
-    // 4. Click Outside to Reset
+    // Close menus on outside click - Debugged to reset bubble
     document.addEventListener('click', (e) => {
       if (!iconMenu.contains(e.target) && !textMenu.contains(e.target)) {
-        textMenu.classList.remove('open');
         iconMenu.classList.remove('visible');
+        textMenu.classList.remove('open');
         bubble.classList.remove('hidden');
       }
     });
